--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dox.report — style homage (clean)</title>
+  <title>Doxbin.live — style homage (clean)</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
@@ -181,7 +181,7 @@
 
   <main class="wrap">
     <div class="container">
-      <h1 class="title">- Dox.report -</h1>
+      <h1 class="title">- doxbin darknet -</h1>
       <div class="profiles">
         <div class="profile">
           <img class="avatar" src="https://files.catbox.moe/ixj070.jpg" alt="GF avatar" />
